--- a/website/site-static/css/iconset/fontcustom.css
+++ b/website/site-static/css/iconset/fontcustom.css
@@ -4,17 +4,18 @@
 
 @font-face {
   font-family: "fontcustom";
-  src: url("fontcustom_302da0992d5107be9c9fbc5e35acc0ea.eot");
-  src: url("fontcustom_302da0992d5107be9c9fbc5e35acc0ea.eot?#iefix") format("embedded-opentype"),
-       url("fontcustom_302da0992d5107be9c9fbc5e35acc0ea.woff") format("woff"),
-       url("fontcustom_302da0992d5107be9c9fbc5e35acc0ea.ttf") format("truetype"),
-       url("fontcustom_302da0992d5107be9c9fbc5e35acc0ea.svg#fontcustom") format("svg");
+  src: url("fontcustom_6bec141cb8a3402f9b165a6bfa945dbc.eot");
+  src: url("fontcustom_6bec141cb8a3402f9b165a6bfa945dbc.eot?#iefix") format("embedded-opentype"),
+       url("fontcustom_6bec141cb8a3402f9b165a6bfa945dbc.woff") format("woff"),
+       url("fontcustom_6bec141cb8a3402f9b165a6bfa945dbc.ttf") format("truetype"),
+       url("fontcustom_6bec141cb8a3402f9b165a6bfa945dbc.svg#fontcustom") format("svg");
   font-weight: normal;
   font-style: normal;
 }
 
 .icon-bandcamp:before,
 .icon-discogs:before,
+.icon-hex:before,
 .icon-lastfm-sign:before,
 .icon-lastfm:before,
 .icon-license-cc-by:before,
@@ -29,8 +30,10 @@
 .icon-license-copyright:before,
 .icon-musicbrainz:before,
 .icon-satellite:before,
+.icon-schedule:before,
 .icon-soundcloud-sign:before,
 .icon-soundcloud:before,
+.icon-tree:before,
 .icon-wikipedia:before {
   font-family: "fontcustom";
   font-style: normal;
@@ -45,20 +48,23 @@
 
 .icon-bandcamp:before { content: "\f100"; }
 .icon-discogs:before { content: "\f101"; }
-.icon-lastfm-sign:before { content: "\f102"; }
-.icon-lastfm:before { content: "\f103"; }
-.icon-license-cc-by:before { content: "\f104"; }
-.icon-license-cc-cc:before { content: "\f105"; }
-.icon-license-cc-nc:before { content: "\f106"; }
-.icon-license-cc-nd:before { content: "\f107"; }
-.icon-license-cc-pd:before { content: "\f108"; }
-.icon-license-cc-remix:before { content: "\f109"; }
-.icon-license-cc-sa:before { content: "\f10a"; }
-.icon-license-cc-share:before { content: "\f10b"; }
-.icon-license-cc-zero:before { content: "\f10c"; }
-.icon-license-copyright:before { content: "\f10d"; }
-.icon-musicbrainz:before { content: "\f10e"; }
-.icon-satellite:before { content: "\f10f"; }
-.icon-soundcloud-sign:before { content: "\f110"; }
-.icon-soundcloud:before { content: "\f111"; }
-.icon-wikipedia:before { content: "\f112"; }
+.icon-hex:before { content: "\f102"; }
+.icon-lastfm-sign:before { content: "\f103"; }
+.icon-lastfm:before { content: "\f104"; }
+.icon-license-cc-by:before { content: "\f105"; }
+.icon-license-cc-cc:before { content: "\f106"; }
+.icon-license-cc-nc:before { content: "\f107"; }
+.icon-license-cc-nd:before { content: "\f108"; }
+.icon-license-cc-pd:before { content: "\f109"; }
+.icon-license-cc-remix:before { content: "\f10a"; }
+.icon-license-cc-sa:before { content: "\f10b"; }
+.icon-license-cc-share:before { content: "\f10c"; }
+.icon-license-cc-zero:before { content: "\f10d"; }
+.icon-license-copyright:before { content: "\f10e"; }
+.icon-musicbrainz:before { content: "\f10f"; }
+.icon-satellite:before { content: "\f110"; }
+.icon-schedule:before { content: "\f111"; }
+.icon-soundcloud-sign:before { content: "\f112"; }
+.icon-soundcloud:before { content: "\f113"; }
+.icon-tree:before { content: "\f114"; }
+.icon-wikipedia:before { content: "\f115"; }
