--- a/website/site-static/sass/_vars.sass
+++ b/website/site-static/sass/_vars.sass
@@ -21,9 +21,10 @@ $main-content-background-color: #F5F5F5
 
 
 // dimensions
-$width-maincontent: 980px
+$width-maincontent: 1115px
 $width-sidebar: 225px
-$width-inner_content: $width-maincontent - 250px
+$width-inner_content: 830px // TODO: remove
+$width-inner: 830px
 $footer_fix-height: 20px
 
 
