--- a/website/site-static/sass/element/_itemview.sass
+++ b/website/site-static/sass/element/_itemview.sass
@@ -101,9 +101,16 @@ section.comments.disqus
         div p
           line-height: 140%
           padding: 0 0 11px !important
-      &.tags 
-        width: 420px
-        float: left
+
+
+      span.tag
+        margin: 2px 2px 0 0
+        padding: 0 4px
+        background: #333
+        color: white
+        border: 1px solid #333
+        text-transform: uppercase
+
 
 
       &.license
