--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -292,6 +292,23 @@
 <!-- the fb-root element -->
 
 
+<script type="text/javascript" src="{{ STATIC_URL }}alibrary/js/playlist.js"></script>
+<script>
+
+	var alibrary = alibrary || {};
+
+	$(function(){
+
+		alibrary.collector = new CollectorApp;
+		alibrary.collector.api_url = "{% url api_dispatch_list resource_name='playlist' api_name='v1'%}";
+		// alibrary.collector.playlist_app = alibrary.playlist;
+		alibrary.collector.init();
+
+	});
+</script>
+
+
+
 
 
 <script type="text/javascript">
