--- a/website/apps/alibrary/templates/alibrary/release/_detail_info.html
+++ b/website/apps/alibrary/templates/alibrary/release/_detail_info.html
@@ -1,4 +1,4 @@
-{% load truncate i18n thumbnail arating_tags alibrary_tags %}
+{% load truncate i18n thumbnail arating_tags alibrary_tags spacify_tags %}
 <div class="span7 padded-h container_content">
 
 <div class="page-header">
@@ -50,6 +50,11 @@
         </dd>
     {% endif %}
 
+    {% if object.catalognumber %}
+        <dt>{% trans "Catalog Number" %}:</dt>
+        <dd>{{ object.catalognumber }}</dd>
+    {% endif %}
+
     <!--
 		{% if object.releasedate %}
 		<dt>{% trans "Releasedate" %}:</dt>
@@ -60,11 +65,6 @@
     {% if object.releasedate_approx %}
         <dt>{% trans "Released" %}:</dt>
         <dd>{{ object.releasedate_approx }}</dd>
-    {% endif %}
-
-    {% if object.catalognumber %}
-        <dt>{% trans "Catalog Number" %}:</dt>
-        <dd>{{ object.catalognumber }}</dd>
     {% endif %}
 
     <!--
@@ -223,6 +223,7 @@
         <span class="value">28</span> <span class="key">{% trans "Downloads" %}</span>
     </dd>
 
+    <!--
     {% if object.tags %}
         <dt>
             {% trans "Tags" %}:
@@ -230,6 +231,17 @@
         <dd>
             {% for tag in object.tags %}
                 {{ tag.name }}{% if not forloop.last %},{% endif %}
+            {% endfor %}
+        </dd>
+    {% endif %}
+    -->
+    {% if object.tags %}
+        <dt>
+            {% trans "Tags" %}:
+        </dt>
+        <dd>
+            {% for tag in object.tags %}
+                <span class="tag">{{ tag.name|spacify }}</span>
             {% endfor %}
         </dd>
     {% endif %}
