--- a/website/apps/alibrary/templates/alibrary/release/list_item_s.html
+++ b/website/apps/alibrary/templates/alibrary/release/list_item_s.html
@@ -4,136 +4,140 @@
 <!-- list item s -->
 
 
-<div class="list_body_row selectable item release {% if item.publish_date %}published{% else %}unpublished{% endif %} {% if item.creator == user %}owner{% endif %} view edit stream collect download" id="list_item_{{ item.pk }}" data-resource_uri="{{ item.get_api_url }}" data-id="{{ item.id }}" data-uuid="{{ item.uuid }}" data-ct="release">
+<div class="list_body_row selectable item release {% if item.publish_date %}published{% else %}unpublished{% endif %} {% if item.creator == user %}owner{% endif %} view edit stream collect download"
+     id="list_item_{{ item.pk }}" data-resource_uri="{{ item.get_api_url }}" data-id="{{ item.id }}"
+     data-uuid="{{ item.uuid }}" data-ct="release">
 
-	<div class="list_body_item c1 image_center_bg" {% if item.main_image %}style="background-image: url({% thumbnail item.main_image 36x36 crop upscale subject_location=item.main_image.subject_location %});"{% endif %}>
+    <div class="list_body_item c1 image_center_bg"
+         {% if item.main_image %}style="background-image: url({% thumbnail item.main_image 36x36 crop upscale subject_location=item.main_image.subject_location %});"{% endif %}>
 
         {% with object=item ct="release" %}
-        {% include "alibrary/element/_item_actions_primary.html" %}
+            {% include "alibrary/element/_item_actions_primary.html" %}
         {% endwith %}
 
-	</div>
-	<div class="list_body_item c2">
-		<ul class="unstyled">
-			<li class="bold">
-				<a href="{{ item.get_absolute_url }}" title="{{ item.name }}">
-					{{ item.name|truncate_chars_inner:24 }}
-					{% topflop_for_object item %}
-				</a>
-			</li>
-			<li>
-				
-				{% for artist in item.get_artists %}
-				
-				{% if "join_phrase" in artist %}
-	
-					{% with item=artist.artist %}
-					{% if artist.join_phrase %}{{ artist.join_phrase }}{% endif %}
-					{% include "alibrary/element/_inline_link.html" %}
-					{% endwith %}
-				
-				{% else %}
-				
-				
-					{% if artist.get_absolute_url %}
-					<a href="{{ artist.get_absolute_url }}">{{ artist.name|truncate_chars_inner:32 }}</a>
-					&nbsp;
-					<a href="{% spurl base=request.get_full_path remove_query_param="page" set_query="artist={{ artist.slug }}" %}" title="{% trans "Only show releases by" %} {{ artist.name }}" style="vertical-align: top;"><span class="filter icon"></span></a>
-					{% if not forloop.last %},{% endif %}
-					{% else %}
-					<span>{{ artist.name|truncate_chars_inner:32 }}</span>{% if not forloop.last %},{% endif %}
-					{% endif %}
-			
-				{% endif %}
-				
-				
-				
-				{% endfor %}
+    </div>
+    <div class="list_body_item c2">
+        <ul class="unstyled">
+            <li class="bold">
+                <a href="{{ item.get_absolute_url }}" title="{{ item.name }}">
+                    {{ item.name|truncate_chars_inner:24 }}
+                    {% topflop_for_object item %}
+                </a>
+            </li>
+            <li>
 
-			</li>
-		</ul>
-	</div>
-	<div class="list_body_item c3">
-		<ul class="unstyled indicator">
+                {% for artist in item.get_artists %}
 
-			{% include "alibrary/element/_track_indicator.html" %}
-			
-		</ul>
-	</div>
-	<div class="list_body_item c4">
-		<ul class="unstyled">
-			<li class="bold">
-				{% if item.label %}
-				
-				{% if item.label.get_absolute_url %}
-				<a href="{{ item.label.get_absolute_url }}" title="{{ item.label.name }}">{{ item.label.name|truncate_chars_inner:18 }}</a>
-				{% else %}
-				<span>{{ item.label.name|truncate_chars_inner:18 }}</span>
-				{% endif %}
-				
-				&nbsp;
-				<a href="{% spurl base=request.get_full_path remove_query_param="page" set_query="label={{ item.label.slug }}" %}" title="{% trans "Only show releases on" %} {{ item.label.name }}" style="vertical-align: top;"><span class="filter icon"></span></a>
+                    {% if "join_phrase" in artist %}
+
+                        {% if artist.join_phrase %}{{ artist.join_phrase }}{% endif %}
+                        {% if artist.artist.get_absolute_url %}
+                            <a href="{{ artist.artist.get_absolute_url }}"
+                               title="{{ artist.artist.name }}">{{ artist.artist.name|truncate_chars_inner:12 }}</a>
+                        {% else %}
+                            <span>{{ artist.artist.name|truncate_chars_inner:12 }}</span>
+                        {% endif %}
+
+                    {% else %}
 
 
-				{% else %}
-				&nbsp;
-				{% endif %}
-			</li>
-			<li class="small">
-				
-				{% if  item.catalognumber %}
-				{{ item.catalognumber }}
-				{% endif %}
-			</li>
-		</ul>
-	</div>
-	<div class="list_body_item c5 license {% if item.get_license %}{{ item.get_license.key }}{% endif %}">
-		
-		<!--
-		<div class="rating">
-			{# rating_for_object item #}
-		</div>	
-		-->
-		
-		{% if item.get_license %}
-				<a href="{{ item.get_license.get_absolute_url }}" title="{% trans "License details" %}" class="dialog todo-modal"><img src="/static/img/icons/transparent_16x16.png" width="78" height="24" alt="{% trans "License details" %}" class="noborder" /></a>
-		{% endif %}
-	</div>
-	<div class="list_body_item c6">
-		<ul class="unstyled">
-			<li>
+                        {% if artist.get_absolute_url %}
+                            <a href="{{ artist.get_absolute_url }}">{{ artist.name|truncate_chars_inner:32 }}</a>
+                            &nbsp;
+                            <a href="{% spurl base=request.get_full_path remove_query_param="page" set_query="artist={{ artist.slug }}" %}"
+                               title="{% trans "Only show releases by" %} {{ artist.name }}"
+                               style="vertical-align: top;"><span class="filter icon"></span></a>
+                            {% if not forloop.last %},{% endif %}
+                        {% else %}
+                            <span>{{ artist.name|truncate_chars_inner:32 }}</span>{% if not forloop.last %},{% endif %}
+                        {% endif %}
+
+                    {% endif %}
+
+
+
+                {% endfor %}
+
+            </li>
+        </ul>
+    </div>
+    <div class="list_body_item c3">
+        <ul class="unstyled indicator">
+
+            {% include "alibrary/element/_track_indicator.html" %}
+
+        </ul>
+    </div>
+    <div class="list_body_item c4">
+        <ul class="unstyled">
+            <li class="bold">
+                {% if item.label %}
+
+                    {% if item.label.get_absolute_url %}
+                        <a href="{{ item.label.get_absolute_url }}"
+                           title="{{ item.label.name }}">{{ item.label.name|truncate_chars_inner:18 }}</a>
+                    {% else %}
+                        <span>{{ item.label.name|truncate_chars_inner:18 }}</span>
+                    {% endif %}
+
+                    &nbsp;
+                    <a href="{% spurl base=request.get_full_path remove_query_param="page" set_query="label={{ item.label.slug }}" %}"
+                       title="{% trans "Only show releases on" %} {{ item.label.name }}"
+                       style="vertical-align: top;"><span class="filter icon"></span></a>
+
+
+                {% else %}
+                    &nbsp;
+                {% endif %}
+            </li>
+            <li class="small">
+
+                {% if  item.catalognumber %}
+                    {{ item.catalognumber }}
+                {% endif %}
+            </li>
+        </ul>
+    </div>
+    <div class="list_body_item c5">
+        {% if item.get_license %}
+            <a href="{{ item.get_license.get_absolute_url }}" title="{% trans "License details" %}" class="iconset iconset-license">{{ item.get_license.iconset_display }}</a>
+        {% else %}
+            &nbsp;
+        {% endif %}
+    </div>
+    <div class="list_body_item c6">
+        <ul class="unstyled">
+            <li>
                 {% if  item.releasedate_approx %}
-				{{ item.releasedate_approx|spacify }}
-				{% endif %}
-			</li>
-			<li class="small">
-				{% if  item.release_country %}
-				{{ item.release_country }}
-				{% endif %}
-			</li>
-		</ul>
-	</div>
-	<div class="list_body_item c7">
-		
+                    {{ item.releasedate_approx|spacify }}
+                {% endif %}
+            </li>
+            <li class="small">
+                {% if  item.release_country %}
+                    {{ item.release_country.name }}
+                {% endif %}
+            </li>
+        </ul>
+    </div>
+    <div class="list_body_item c7">
 
-		
-		<ul class="unstyled">
-			<li>
-				{{ item.get_releasetype_display }}
-			</li>
-			<li class="small">
-				{{ item.get_releasestatus_display }}
-			</li>
-		</ul>
-	</div>
-	<div class="list_body_item c8 action">
 
+        <ul class="unstyled">
+            <li>
+                {{ item.get_releasetype_display }}
+            </li>
+            <li class="small">
+                {{ item.get_releasestatus_display }}
+            </li>
+        </ul>
+    </div>
+    <div class="list_body_item c8 action">
 
         <ul class="unstyled action secondary horizontal">
 
             <li>
                 <a href="#release:{{ item.pk }}:mp3"
-                   class="downloadable queue{% if not perms.alibrary.downoad_media %} disabled{% endif %}"
+                   class="downloadable queue{% if not perms.alibrary.downoad_media or not item.publish_date %} disabled{% endif %}"
                    data-ct="release"
                    data-resource_uri="{{ item.get_api_url }}"
                    title="{% trans "Download" %}">
@@ -151,17 +155,17 @@
             </li>
 
             {% if  perms.alibrary.edit_release %}
-            <li>
-                <a href="{{ item.get_edit_url }}"
-                   class=""
-                   title="{% trans "Edit" %}">
-                    <i class="icon icon-edit"></i>
-                </a>
-            </li>
+                <li>
+                    <a href="{{ item.get_edit_url }}"
+                       class=""
+                       title="{% trans "Edit" %}">
+                        <i class="icon icon-edit"></i>
+                    </a>
+                </li>
             {% endif %}
 
         </ul>
 
-	</div>
+    </div>
 
 </div>
